--- a/media/vidplayer/nginx-template.conf
+++ b/media/vidplayer/nginx-template.conf
@@ -6,8 +6,8 @@ vim: filetype=django:
 ###############################################################################
 {% for name, upstream in salt['pillar.get']('vidplayer:upstreams', {})|dictsort %}
 upstream {{ name }} {
-{%- for server_name, server in upstream|dictsort %}
-    server {{ server_name }};
+{%- for server in upstream %}
+    server {{ server }};
 {%- endfor %}
 }
 {% endfor %}
