Fixed path for uwsgi.ini

--- a/media/vidplayer/uwsgi.ini
+++ b/media/vidplayer/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 socket = /tmp/vidplayer.sock
 chmod-socket = 666
-chdir = /srv/vidplayer
+chdir = /srv/vidplayer/project/vidplayer
 wsgi-file = /srv/vidplayer/project/vidplayer/vidplayer/wsgi.py
 pidfile = /srv/vidplayer/uwsgi.pid
 logto = /srv/vidplayer/uwsgi.log
