Update nginx template to block invalid host headers

--- a/media/vidplayer/nginx-template.conf
+++ b/media/vidplayer/nginx-template.conf
@@ -23,6 +23,10 @@ server {
     gzip_types      application/javascript;
     access_log      /var/log/nginx/{{ name }}.access_log main;
     error_log       /var/log/nginx/{{ name }}.error_log  info;
+
+    if ($host !~* ^ ({{ server.get('legal_host_headers') }})$ ) {
+        return 444;
+    }
 {% for location in server.get('locations', []) -%}
 {%- for loc_name, contents in location.iteritems() %}
     location {{ loc_name }} {
