--- a/media/vidplayer/nginx-template.conf
+++ b/media/vidplayer/nginx-template.conf
@@ -21,8 +21,8 @@ server {
     gzip            on;
     gzip_min_length 1000;
     gzip_types      application/javascript;
-    access_log      /var/log/nginx/{{ name }}.access_log main;
-    error_log       /var/log/nginx/{{ name }}.error_log  info;
+    access_log      /var/log/nginx/{{ name }}.access_log;
+    error_log       /var/log/nginx/{{ name }}.error_log;
 
     if ($host !~* ^({{ server.get('legal_host_headers') }})$ ) {
         return 444;
