--- a/x11progs/spectrwm.conf
+++ b/x11progs/spectrwm.conf
@@ -109,3 +109,4 @@ program[menu]		= dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb 
 # quirk[Xitk:Xine Window]			= FLOAT + ANYWHERE
 # quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
 # quirk[pcb:pcb]				= FLOAT
+{{ salt['pillar.get']('spectrwm:quirks', '') }}
