--- a/x11progs/spectrwm.conf
+++ b/x11progs/spectrwm.conf
@@ -34,7 +34,7 @@ bar_font_color[1]	= rgb:b6/e7/7d
 bar_font			= Terminus:style=Regular:pixelsize=12:antialias=true,-*-terminus-medium-*-*-*-12-*-*-*-*-*-*
 # bar_action		= baraction.sh
 # bar_justify		= left
-bar_format			= +N:+I +S +D %a %x %I:%M %p %Z +U
+bar_format			= +N:+I +S +D %a %x %I:%M %p %Z +U +W
 # bar_at_bottom		= 1
 # stack_enabled		= 1
 # clock_enabled		= 1
