template font in spectrwm.conf

--- a/x11progs/spectrwm.conf
+++ b/x11progs/spectrwm.conf
@@ -31,7 +31,7 @@ bar_border[1]		= rgb:00/00/00
 bar_border_unfocus[1]	= rgb:00/00/00
 # bar_color[1]		= black
 bar_font_color[1]	= rgb:b6/e7/7d
-bar_font			= Terminus:style=Regular:pixelsize=12:antialias=true,-*-terminus-medium-*-*-*-12-*-*-*-*-*-*
+bar_font			= {{ salt['pillar.get']('spectrwm:bar_font', 'Terminus:style=Regular:pixelsize=12:antialias=true,-*-terminus-medium-*-*-*-12-*-*-*-*-*-*') }}
 # bar_action		= baraction.sh
 # bar_justify		= left
 bar_format			= +N:+I +S +D %a %x %I:%M %p %Z +U +W
