update spectrwm conf for new version

--- a/x11progs/spectrwm.conf
+++ b/x11progs/spectrwm.conf
@@ -8,18 +8,21 @@ workspace_limit	= 22
 # focus_close_wrap	= 1
 # focus_default		= last
 # spawn_position		= next
+# warp_pointer		= 1
 
 # Window Decoration
 # border_width		= 1
 color_focus			= rgb:aa/55/55
+color_focus_maximized	= yellow
 color_unfocus		= rgb:50/50/50
+# color_unfocus_maximized	= rgb:88/88/00
 # region_padding	= 0
-# tile_gap			= 0
+# tile_gap		= 0
 
 # Region containment
 # Distance window must be dragged/resized beyond the region edge before it is
 # allowed outside the region.
-# boundary_width		= 50
+# boundary_width 		= 50
 
 # Remove window border when bar is disabled and there is only one window in workspace
 # disable_border		= 1
@@ -31,16 +34,17 @@ bar_border[1]		= rgb:00/00/00
 bar_border_unfocus[1]	= rgb:00/00/00
 # bar_color[1]		= black
 bar_font_color[1]	= rgb:b6/e7/7d
-bar_font			= {{ salt['pillar.get']('spectrwm:bar_font', 'Terminus:style=Regular:pixelsize=12:antialias=true,-*-terminus-medium-*-*-*-12-*-*-*-*-*-*') }}
+bar_font			= {{ salt['pillar.get']('spectrwm:bar_font', '-*-terminus-medium-*-*-*-*-*-*-*-*-*-*-*') }}
 # bar_action		= baraction.sh
 # bar_justify		= left
-bar_format			= +N:+I +S +D %a %x %I:%M %p %Z +U +W
+bar_format			= +N:+I +S +D %a %x %I:%M %p %Z +M +U +W
 # bar_at_bottom		= 1
 # stack_enabled		= 1
 # clock_enabled		= 1
 # clock_format		= %a %x %I:%M %p %Z
-# title_name_enabled	= 0
-# title_class_enabled	= 0
+# iconic_enabled	= 0
+# window_class_enabled	= 0
+# window_instance_enabled	= 0
 window_name_enabled	= 1
 verbose_layout		= 0
 urgent_enabled		= 0
@@ -64,6 +68,13 @@ urgent_enabled		= 0
 # layout		= ws[3]:0:0:0:0:fullscreen
 # layout		= ws[4]:4:0:0:0:vertical_flip
 # layout		= ws[5]:0:0:0:0:horizontal_flip
+
+# Set workspace name at start
+# name			= ws[1]:IRC
+# name			= ws[2]:Email
+# name			= ws[3]:Browse
+# name			= ws[10]:Music
+{{ salt['pillar.get']('spectrwm:names', '') }}
 
 # Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
 modkey = Mod4
