set dmenu as pillarizable

--- a/x11progs/spectrwm.conf
+++ b/x11progs/spectrwm.conf
@@ -87,7 +87,7 @@ keyboard_mapping = ~/.spectrwm_us.conf
 # Validated default programs:
 program[lock]		= {{ salt['pillar.get']('spectrwm:lock', 'xlock') }}
 program[term]		= {{ salt['pillar.get']('spectrwm:term', 'xterm') }}
-program[menu]		= dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_font_color -sf $bar_color
+program[menu]		= {{ salt['pillar.get']('spectrwm:menu', 'dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_font_color -sf $bar_color') }}
 
 # To disable validation of the above, free the respective binding(s):
 # bind[]		= MOD+Shift+Delete	# disable lock
