update layman and fix some typos

--- a/gentools/layman.cfg
+++ b/gentools/layman.cfg
@@ -15,6 +15,11 @@ cache     : %(storage)s/cache
 
 installed: %(storage)s/installed.xml
 
+#-----------------------------------------------------------
+# Prompt the user if they are installing unofficial overlays
+
+check_official : Yes
+
 # This has been renamed from the following
 # old name  : value use it for updating to new one above
 # local_list: %(storage)s/overlays.xml
@@ -22,11 +27,43 @@ installed: %(storage)s/installed.xml
 # or edit the value above to the current name of your
 # installed overlay(s) file.
 
+##### NEW ##### Repo Config Options #####
+#-----------------------------------------------------------
+# Defines whether or not a repos.conf or make.conf file is
+# required for the repository control group. Set to No for
+# non-package manager involved repository control. For normal
+# portage overlay use and function, this needs to be set to
+# Yes. If yes, it requires at least one conf_type to be set.
+
+require_repoconfig : Yes
+
 #-----------------------------------------------------------
 # Path to the make.conf file that should be modified by
 # layman
 
 make_conf : %(storage)s/make.conf
+
+#-----------------------------------------------------------
+# Path to the repos.conf file that should be modified by
+# layman
+
+repos_conf : /etc/portage/repos.conf/layman.conf
+
+#-----------------------------------------------------------
+# Defines whether or not auto_sync will be set to "yes" or
+# "no" in your repos.conf config. Ultimately deciding whether
+# or not the portage sync plug-in will automatically sync your
+# layman overlays.
+
+auto_sync : Yes
+
+#-----------------------------------------------------------
+# Repository config types used by layman
+# (repos.conf, make.conf)
+
+conf_type : repos.conf
+
+#-----------------------------------------------------------
 
 #-----------------------------------------------------------
 # URLs of the remote lists of overlays (one per line) or
@@ -36,6 +73,39 @@ make_conf : %(storage)s/make.conf
 #            http://dev.gentoo.org/~wrobel/layman/global-overlays.xml
 #            http://mydomain.org/my-layman-list.xml
 #            file:///var/lib/layman/my-list.xml
+#
+#### GPG signed lists #### COMING SOON TO A DOWNLOAD SITE NEAR YOU #####
+#
+#  gpg_signed_lists :
+#       These can be clearsigned or signed (compressed) overlay lists
+#       Each url will be one complete file to download, verify, decrypt.
+#       layman will automatically verify and decrypt the list before saving
+#       One url per line, indented
+#
+#   e.g.:
+#    gpg_signed_lists :
+#        http://someserver.somewhere.com/someoverlays.xml.asc
+#
+gpg_signed_lists :
+
+#
+# gpg_detached_lists:
+#       These url's involve downloading 2 files
+#       The first url listed will be the overlays xml list.
+#       The second url will be the detached signature file
+#           with one of {.gpg, .asc, .sig} extension
+#       Both url's must be on the same line space separated and indented
+#
+#   e.g.:
+#    gpg_detached_lists :
+#        http://distfiles.gentoo.org/overlays.xml http://distfiles.gentoo.org/overlays.xml.asc
+#        http://someserver.somewhere.com/someoverlays.xml http://someserver.somewhere.com/someoverlays.xml.gpg
+
+gpg_detached_lists :
+#    https://api.gentoo.org/overlays/repositories.xml https://api.gentoo.org/overlays/repositories.xml.asc
+
+#  original unsigned lists and definitions
+#  one url per line, indented
 
 overlays  : http://www.gentoo.org/proj/en/overlays/repositories.xml
             https://raw.githubusercontent.com/shadowfax-chc/shadowfax-overlay/master/overlay.xml
@@ -51,9 +121,10 @@ overlays  : http://www.gentoo.org/proj/en/overlays/repositories.xml
 
 #-----------------------------------------------------------
 # Proxy support
-# If unset, layman will use the http_proxy environment variable.
+# If unset, layman will use the http_proxy/https_proxy environment variable.
 #
-#proxy  : http://[user:pass@]www.my-proxy.org:3128
+#http_proxy  : http://[user:pass@]www.my-proxy.org:3128
+#https_proxy : https://[user:pass@]www.my-proxy.org:3128
 
 #-----------------------------------------------------------
 # Strict checking of overlay definitions
@@ -127,9 +198,12 @@ news_reporter: portage
 #git_command        : /usr/bin/git
 #mercurial_command  : /usr/bin/hg
 #rsync_command      : /usr/bin/rsync
+#left intentionally blank since squashfs only needs to
+#mount the squashfs image.
+#squashfs-command   :
 #svn_command        : /usr/bin/svn
 #tar_command        : /bin/tar
-#g-common_command   : /usr/bin/g-common
+#g-sorcery_command  : /usr/bin/g-sorcery
 
 
 #-----------------------------------------------------------
@@ -137,6 +211,7 @@ news_reporter: portage
 #
 # These commnad options will be added to the above commands
 # when the overlay is added or synced.
+# Use spaces to seperate command line arguments
 #
 #    note: there are some options hardcoded in the backend
 #          scripts already.  All VCS types listed here are
@@ -165,6 +240,8 @@ news_reporter: portage
 #svn_syncopts :
 #g-common_generateopts :
 #g-common_syncopts :
+#g-sorcery_generateopts :
+#g-sorcery_syncopts :
 
 
 #-----------------------------------------------------------
@@ -188,6 +265,7 @@ news_reporter: portage
 #svn_postsync :
 #tar_postsync :
 #g-common_postsync :
+#g-sorcery_postsync :
 
 
 #-----------------------------------------------------------
