--- a/x11progs/spectrwm.conf
+++ b/x11progs/spectrwm.conf
@@ -89,7 +89,7 @@ program[lock]		= {{ salt['pillar.get']('spectrwm:lock', 'xlock') }}
 program[term]		= {{ salt['pillar.get']('spectrwm:term', 'xterm') }}
 program[menu]		= {{ salt['pillar.get']('spectrwm:menu', 'dmenu_run -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_font_color -sf $bar_color') }}
 program[search]		= {{ salt['pillar.get']('spectrwm:search', 'dmenu -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_font_color -sf $bar_color') }}
-program[name_workspaace]		= {{ salt['pillar.get']('spectrwm:name_workspaace', 'dmenu -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_font_color -sf $bar_color') }}
+program[name_workspace]		= {{ salt['pillar.get']('spectrwm:name_workspace', 'dmenu -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_font_color -sf $bar_color') }}
 
 # To disable validation of the above, free the respective binding(s):
 # bind[]		= MOD+Shift+Delete	# disable lock
