update spectrwm conf

--- a/x11progs/spectrwm.conf
+++ b/x11progs/spectrwm.conf
@@ -8,6 +8,8 @@ workspace_limit	= 22
 # focus_close_wrap	= 1
 # focus_default		= last
 # spawn_position		= next
+# workspace_clamp	= 1
+# warp_focus		= 1
 # warp_pointer		= 1
 
 # Window Decoration
@@ -25,16 +27,20 @@ color_unfocus		= rgb:50/50/50
 # boundary_width 		= 50
 
 # Remove window border when bar is disabled and there is only one window in workspace
+{%- if salt['pillar.get']('spectrwm:disable_border', False) %}
+disable_border		= 1
+{%- else %}
 # disable_border		= 1
+{%- endif %}
 
 # Bar Settings
 # bar_enabled		= 1
 bar_border_width	= 1
 bar_border[1]		= rgb:44/44/44
-bar_border_unfocus[1]	= rgb:00/00/00
-# bar_color[1]		= black
-bar_font_color[1]	= rgb:b6/e7/7d
-bar_font			= {{ salt['pillar.get']('spectrwm:bar_font', '-*-terminus-medium-*-*-*-*-*-*-*-*-*-*-*') }}
+bar_border_unfocus[1]	= rgb:26/26/26
+bar_color[1]		= rgb:26/26/26
+bar_font_color[1]	= rgb:bc/bc/bc
+bar_font			= {{ salt['pillar.get']('spectrwm:bar_font', 'Terminus:style=Regular:pixelsize=12:antialias=true') }}
 # bar_action		= baraction.sh
 # bar_justify		= left
 bar_format			= +N:+I +S +D %a %x %I:%M %p %Z +M +U +W
@@ -43,6 +49,7 @@ bar_format			= +N:+I +S +D %a %x %I:%M %p %Z +M +U +W
 # clock_enabled		= 1
 # clock_format		= %a %x %I:%M %p %Z
 # iconic_enabled	= 0
+# maximize_hide_bar	= 0
 # window_class_enabled	= 0
 # window_instance_enabled	= 0
 window_name_enabled	= 1
