--- a/x11progs/spectrwm.conf
+++ b/x11progs/spectrwm.conf
@@ -100,7 +100,7 @@ program[name_workspace]		= {{ salt['pillar.get']('spectrwm:name_workspace', 'dme
 
 # To disable validation of the above, free the respective binding(s):
 # bind[]		= MOD+Shift+Delete	# disable lock
-# bind[]		= MOD+Shift+Enter	# disable term
+# bind[]		= MOD+Shift+Return	# disable term
 # bind[]		= MOD+p			# disable menu
 
 # Optional default programs that will only be validated if you override:
